--- a/styles/LeftSide.module.scss
+++ b/styles/LeftSide.module.scss
@@ -3,7 +3,16 @@
 .left_side {
     @include column();
     
+    height: 100%;
+    width: 300px;
     box-sizing: border-box;
     background: #262626;
     border-right: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.left_side_header {
+    @include column();  
+
+    border-bottom: 1px solid rgba(248, 250, 252, 0.2);
+    margin-top: 30px;
 }
