--- a/styles/CenterHeader.module.scss
+++ b/styles/CenterHeader.module.scss
@@ -1,8 +1,9 @@
 @import "./Flex.module.scss";
+@import "./Color.module.scss";
 
 .header_center_side {
     margin-top: 24px;
-    // border-bottom: 1px solid rgba(248, 250, 252, 0.2);
+    border-bottom: 1px solid rgba(248, 250, 252, 0.2);
 }
 
 .header_1_center_side {
@@ -23,8 +24,9 @@
 }
 
 .header_des_center_side {
+    @include sub_text();
+
     font-size: 14px;
-    color: #7F7F7F;
 }
 
 .header_searching_bar_center_side {
