Update business code click item

--- a/styles/RightSide.module.scss
+++ b/styles/RightSide.module.scss
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     background: #1F1F1F;
     border-left: 1px solid rgba(248, 250, 252, 0.2);
+    width: 100%;
 }
 
 @mixin right_side_row_center {
