--- a/styles/CenterBody.module.scss
+++ b/styles/CenterBody.module.scss
@@ -14,13 +14,15 @@
     margin: 16px 16px 0px 16px;
 }
 
-.letter_item_select:hover {
+.letter_item_select:hover,
+.letter_item_active {
     @include select();
 
     cursor: pointer;
     background: #353739;
     border: 1px solid rgba(127, 127, 127, 0.2);
     border-radius: 8px;
+    margin-bottom: 5px;
 }
 
 .letter_item_select{
@@ -119,7 +121,9 @@
 }
 
 .letter_item_select:hover .letter_box_file_collap,
-.letter_item_select:hover .letter_box_file_default {
+.letter_item_active .letter_box_file_collap,
+.letter_item_select:hover .letter_box_file_default,
+.letter_item_active .letter_box_file_default {
     background-color: #1F1F1F;
 }
 
